# DSA-Assignments

assignment0/: CMakeLists.txt
assignment0/data/: output.txt
assignment0/src/: CMakeLists.txt
assignment0/src/abremang/: exampleApplication.cpp
assignment0/src/dvernon/: example.h
assignment1/data/: input.txt  input3.txt  itu_morsecode_dictionary.txt
assignment1/src/abremang/: CMakeLists.txt  assignment1Application.cpp  assignment1Implementation.cpp
assignment1/src/dvernon/: exampleApplication.cpp  exampleImplementation.cpp
assignment2/: CMakeLists.txt
assignment2/buil/: CMakeCache.txt
assignment2/data/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  output.txt
assignment2/src/abremang/: assignment2.h  assignment2Application.cpp  (+1 more)
assignment2/src/dvernon/: CMakeLists.txt
assignment3/: CMakeLists.txt
assignment3/data/: input.txt  input1.txt  input3.txt  input4.txt  itu_morsecode_dictionary.txt
assignment4/: CMakeLists.txt
assignment4/data/: assign4.txt  email.txt  input.txt  input1.txt  input2.txt  output.txt  textfile1.txt  textfile2.txt  textfile3.txt  textfile4.txt  textfile5.txt  textfile7.txt  words.txt  words1.txt
assignment5/: CMakeLists.txt
assignment5/data/: input.txt  input1.txt  output.txt
assignment6/: CMakeLists.txt
assignment6/data/: input.txt  input1.txt  output.txt  store_location.txt
assignment7/: CMakeLists.txt
assignment7/data/: input.txt  input1.txt  output.txt
plentify/data/: input1.txt  input2.txt  output.txt
trial/: CMakeLists.txt
trial/data/: input2.txt  input3.txt  output.txt
(+29 files in other folders)
